--- a/app/src/main/res/layout/intermediate_page.xml
+++ b/app/src/main/res/layout/intermediate_page.xml
@@ -30,7 +30,7 @@
                 android:id="@+id/nome_app"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="PronuntiApp"
+                android:text="@string/pronunti_app"
                 android:textColor="@color/celeste"
                 android:textStyle="bold"
                 android:textSize="30dp"
@@ -40,7 +40,7 @@
                 android:id="@+id/benvenuto"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Benvenuto/a"
+                android:text="@string/benvenuto"
                 android:textColor="@color/celeste"
                 android:textStyle="bold"
                 android:textSize="30dp"
