--- a/app/src/main/res/layout/activity_scenario_fiabesco.xml
+++ b/app/src/main/res/layout/activity_scenario_fiabesco.xml
@@ -39,7 +39,7 @@
             android:id="@+id/tvScenarioTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Scenario Fiabesco"
+            android:text="@string/scenario_fiabesco"
             android:textSize="24sp"
             android:textStyle="bold" />
 
@@ -58,7 +58,7 @@
             android:layout_marginTop="54dp"
             android:backgroundTint="#1C3144"
             android:onClick="onConfermaClick"
-            android:text="Conferma"
+            android:text="@string/conferma"
             android:textColor="#FFFFFF" />
     </LinearLayout>
 
