--- a/app/src/main/res/layout/appuntamenti_genitore_dettagli.xml
+++ b/app/src/main/res/layout/appuntamenti_genitore_dettagli.xml
@@ -20,7 +20,7 @@
         android:id="@+id/oraTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Ora: "
+        android:text="@string/ora_appuntamento"
         android:layout_marginTop="16dp"
         app:layout_constraintTop_toBottomOf="@+id/spinnerAppointments"
         app:layout_constraintStart_toStartOf="parent"
@@ -30,7 +30,7 @@
         android:id="@+id/nome_figlio_Genitore_TextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Nome Figlio: "
+        android:text="@string/nome_figlio"
         android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@+id/oraTextView"
         app:layout_constraintStart_toStartOf="parent"
