--- a/app/src/main/res/layout/dettagli_appuntamenti.xml
+++ b/app/src/main/res/layout/dettagli_appuntamenti.xml
@@ -8,7 +8,7 @@
         android:id="@+id/appointmentDetailsTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Dettagli Appuntamento"
+        android:text="@string/dettagli_appuntamento"
         android:textSize="18sp"
         android:layout_marginTop="16dp"
         android:layout_marginStart="16dp"
@@ -21,7 +21,7 @@
         android:id="@+id/pazienteTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Paziente: "
+        android:text="@string/paziente_appuntamento"
         android:layout_marginTop="16dp"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
@@ -33,7 +33,7 @@
         android:id="@+id/genitoreTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Genitore: "
+        android:text="@string/genitore_appuntamento"
         android:layout_marginTop="8dp"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
@@ -45,7 +45,7 @@
         android:id="@+id/oraTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Ora: "
+        android:text="@string/ora_appuntamento"
         android:layout_marginTop="8dp"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
