--- a/app/src/main/res/navigation/nav_graph_bambino.xml
+++ b/app/src/main/res/navigation/nav_graph_bambino.xml
@@ -8,12 +8,15 @@
     <fragment
         android:id="@+id/homePageBambino"
         android:name="it.uniba.dib.sms2324_16.HomePageBambinoFragment"
-        android:label="Home Page Genitore"
+        android:label="Home Page Bambino"
         tools:layout="@layout/fragment_homepage_bambino" >
 
         <action
             android:id="@+id/action_homePageBambino_to_percorsoFragment"
             app:destination="@id/percorsoFragment" />
+        <action
+            android:id="@+id/action_homePageBambino_to_leaderboardActivity"
+            app:destination="@id/leaderboardActivity" />
     </fragment>
     <fragment
         android:id="@+id/percorsoFragment"
@@ -24,5 +27,9 @@
             android:id="@+id/action_percorsoFragment_to_homePageBambino"
             app:destination="@id/homePageBambino" />
     </fragment>
+    <activity
+        android:id="@+id/leaderboardActivity"
+        android:name="it.uniba.dib.sms2324_16.LeaderboardActivity"
+        android:label="LeaderboardActivity" />
 
 </navigation>
