--- a/app/src/main/res/layout/fragment_homepage_bambino.xml
+++ b/app/src/main/res/layout/fragment_homepage_bambino.xml
@@ -20,6 +20,7 @@
         android:layout_below="@+id/testo">
 
         <androidx.cardview.widget.CardView
+            android:id = "@+id/cardClassifica"
             android:layout_width="150dp"
             android:layout_height="150dp"
             android:layout_columnWeight="1"
