--- a/app/src/main/res/layout/scelta_personaggio_piratesco.xml
+++ b/app/src/main/res/layout/scelta_personaggio_piratesco.xml
@@ -5,9 +5,24 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#b5e2ff"
-    tools:context=".SceltaPersonaggioPiratesco">
-
+    android:background="#b5e2ff">
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/MyToolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="#b5e2ff"
+        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+        app:title=""
+        tools:ignore="MissingConstraints" />
+    <ImageButton
+        android:id="@+id/topLeftIcon"
+        android:layout_width="48dp"
+        android:layout_height="49dp"
+        android:layout_gravity="start"
+        android:contentDescription="Icona in alto a sinistra"
+        android:src="@mipmap/ic_turn_left"
+        tools:ignore="MissingConstraints" />
     <ImageView
         android:id="@+id/imageView4"
         android:layout_width="410dp"
