--- a/app/src/main/res/layout/profilo_utente.xml
+++ b/app/src/main/res/layout/profilo_utente.xml
@@ -56,6 +56,15 @@
             layout="@layout/posizioneclassifica_paziente"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
+        <Button
+            android:id="@+id/assegnaButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Assegna"
+            app:layout_constraintTop_toBottomOf="@id/posizioneClassificaTextView"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginTop="8dp"/>
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
