--- a/app/src/main/res/layout/fragment_homepage_bambino.xml
+++ b/app/src/main/res/layout/fragment_homepage_bambino.xml
@@ -136,7 +136,7 @@
         </androidx.cardview.widget.CardView>
 
         <androidx.cardview.widget.CardView
-            android:id="@+id/cardAppuntamenti"
+            android:id="@+id/riscuotiPremi"
             android:layout_width="150dp"
             android:layout_height="150dp"
             android:layout_columnWeight="1"
