--- a/app/src/main/res/layout/fragment_percorso.xml
+++ b/app/src/main/res/layout/fragment_percorso.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/scenario_bambino"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -17,6 +18,65 @@
                 android:id="@+id/surfaceView"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"/>
+
+            <com.google.android.material.card.MaterialCardView
+                android:layout_width="50dp"
+                android:layout_height="400dp"
+                android:layout_columnWeight="1"
+                android:layout_rowWeight="1"
+                android:layout_column="0"
+                android:layout_row="0"
+                android:layout_margin="12dp"
+                app:cardCornerRadius="15dp"
+                app:cardElevation="12dp"
+                app:cardBackgroundColor="@color/white"
+                app:strokeColor="@color/blu_scuro"
+                app:strokeWidth="2dp">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:id="@+id/personaggio1"
+                        android:layout_width="wrap_content"
+                        android:layout_height="0dp"
+                        android:layout_weight="1"
+                        android:paddingEnd="2dp"
+                        android:paddingStart="2dp"
+                        android:src="@drawable/personaggio_fatato_1"/>
+
+                    <ImageView
+                        android:id="@+id/personaggio2"
+                        android:layout_width="wrap_content"
+                        android:layout_height="0dp"
+                        android:layout_weight="1"
+                        android:paddingEnd="2dp"
+                        android:paddingStart="2dp"
+                        android:src="@drawable/personaggio_fatato_1"/>
+
+                    <ImageView
+                        android:id="@+id/personaggio3"
+                        android:layout_width="wrap_content"
+                        android:layout_height="0dp"
+                        android:layout_weight="1"
+                        android:paddingEnd="2dp"
+                        android:paddingStart="2dp"
+                        android:src="@drawable/personaggio_fatato_1"/>
+
+                    <ImageView
+                        android:id="@+id/personaggio4"
+                        android:layout_width="wrap_content"
+                        android:layout_height="0dp"
+                        android:layout_weight="1"
+                        android:paddingEnd="2dp"
+                        android:paddingStart="2dp"
+                        android:src="@drawable/personaggio_fatato_1"/>
+
+                </LinearLayout>
+
+            </com.google.android.material.card.MaterialCardView>
 
         </RelativeLayout>
 
