--- a/app/src/main/res/layout/fragment_gioco1b_fragment.xml
+++ b/app/src/main/res/layout/fragment_gioco1b_fragment.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/gioco1_fragment"
+    android:id="@+id/gioco1B_fragment"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -46,13 +46,33 @@
 
         <Button
             android:id="@+id/buttonRegistraAudio"
-            android:layout_width="wrap_content"
+            android:layout_width="120dp"
             android:layout_height="wrap_content"
             android:layout_below="@+id/chooseTopic"
-            android:layout_marginStart="140dp"
+            android:layout_marginStart="14dp"
             android:layout_marginTop="60dp"
-            android:drawableLeft="@drawable/microfono"
+            android:onClick="buttonRegistraAudioPressed"
             android:text="REGISTRA" />
+
+        <Button
+            android:id="@+id/buttonStopAudio"
+            android:layout_width="120dp"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/chooseTopic"
+            android:layout_marginStart="150dp"
+            android:layout_marginTop="60dp"
+            android:onClick="buttonStopAudioPressed"
+            android:text="STOP" />
+
+        <Button
+            android:id="@+id/buttonPlayAudio"
+            android:layout_width="120dp"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/chooseTopic"
+            android:layout_marginStart="280dp"
+            android:layout_marginTop="60dp"
+            android:onClick="buttonPlayAudioPressed"
+            android:text="PLAY" />
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/buttonInvioRisposta"
