--- a/app/src/main/res/layout/fragment_percorso.xml
+++ b/app/src/main/res/layout/fragment_percorso.xml
@@ -17,7 +17,7 @@
             <SurfaceView
                 android:id="@+id/surfaceView"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
+                android:layout_height="match_parent" />
 
             <com.google.android.material.card.MaterialCardView
                 android:layout_width="50dp"
@@ -77,6 +77,39 @@
                 </LinearLayout>
 
             </com.google.android.material.card.MaterialCardView>
+
+
+            <LinearLayout
+                android:id="@+id/blocco_layout1"
+                android:layout_width="100dp"
+                android:layout_height="40dp"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:padding="0dp"
+                android:layout_marginEnd="5dp"
+                android:layout_marginStart="260dp"
+                android:layout_marginTop="5dp"
+                android:background="@drawable/round_back_white10"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:layout_width="40dp"
+                    android:layout_height="50dp"
+                    android:layout_marginEnd="0dp"
+                    android:layout_marginStart="10dp"
+                    android:src="@drawable/soldo"
+                    />
+
+                <TextView
+                    android:id="@+id/numeroMonete"
+                    android:layout_width="55dp"
+                    android:layout_height="40dp"
+                    android:gravity="center_vertical"
+                    android:textSize="24dp"
+                    />
+
+            </LinearLayout>
+
 
         </RelativeLayout>
 
