--- a/app/src/main/res/layout/activity_exercise_list.xml
+++ b/app/src/main/res/layout/activity_exercise_list.xml
@@ -1,11 +1,12 @@
 <!-- activity_exercise_list.xml -->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+   android:id="@+id/DettagliEsercizi"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <!-- Toolbar -->
+    <!-- RecyclerView per la lista di esercizi -->
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/MyToolbar"
         android:layout_width="match_parent"
@@ -45,9 +46,9 @@
                 android:textColor="@android:color/white"
                 android:textSize="14sp" />
         </LinearLayout>
+
     </androidx.appcompat.widget.Toolbar>
 
-    <!-- RecyclerView per la lista di esercizi -->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
