--- a/app/src/main/res/layout/progressi_paziente_errori.xml
+++ b/app/src/main/res/layout/progressi_paziente_errori.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
+    android:orientation="horizontal"
     android:padding="16dp">
 
     <TextView
@@ -16,6 +16,7 @@
         android:id="@+id/textViewpercentualeerrori"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="110dp"
         android:text="TextView" />
 
 
